crates/panache-parser/tests/snapshots/yaml__yaml_cst_suite_DE56__00.snap
---
source: crates/panache-parser/tests/yaml.rs
assertion_line: 312
expression: snapshot
---
case_id: DE56/00
input: "\"1 trailing\\t\n    tab\"\n"
diagnostics:

cst:
YAML_STREAM@0..23
  YAML_DOCUMENT@0..23
    YAML_SCALAR@0..22
      YAML_SCALAR_TEXT@0..22 "\"1 trailing\\t\n    tab\""
    NEWLINE@22..23 "\n"
