crates/panache-parser/tests/snapshots/yaml__yaml_cst_suite_DE56__01.snap
---
source: crates/panache-parser/tests/yaml.rs
assertion_line: 312
expression: snapshot
---
case_id: DE56/01
input: "\"2 trailing\\t  \n    tab\"\n"
diagnostics:

cst:
YAML_STREAM@0..25
  YAML_DOCUMENT@0..25
    YAML_SCALAR@0..24
      YAML_SCALAR_TEXT@0..24 "\"2 trailing\\t  \n    tab\""
    NEWLINE@24..25 "\n"
