crates/panache-parser/tests/snapshots/yaml__yaml_cst_suite_DE56__02.snap
---
source: crates/panache-parser/tests/yaml.rs
expression: snapshot
---
case_id: DE56/02
input: "\"3 trailing\\\t\n    tab\"\n"
diagnostics:

cst:
YAML_STREAM@0..23
  YAML_DOCUMENT@0..23
    YAML_SCALAR@0..22
      YAML_SCALAR_TEXT@0..13 "\"3 trailing\\\t"
      NEWLINE@13..14 "\n"
      YAML_SCALAR_TEXT@14..22 "    tab\""
    NEWLINE@22..23 "\n"
