crates/panache-parser/tests/snapshots/yaml__yaml_cst_suite_DE56__04.snap
---
source: crates/panache-parser/tests/yaml.rs
expression: snapshot
---
case_id: DE56/04
input: "\"5 trailing\t\n    tab\"\n"
diagnostics:

cst:
YAML_STREAM@0..22
  YAML_DOCUMENT@0..22
    YAML_SCALAR@0..21
      YAML_SCALAR_TEXT@0..12 "\"5 trailing\t"
      NEWLINE@12..13 "\n"
      YAML_SCALAR_TEXT@13..21 "    tab\""
    NEWLINE@21..22 "\n"
