crates/panache-parser/tests/snapshots/yaml__yaml_cst_suite_DE56__05.snap
---
source: crates/panache-parser/tests/yaml.rs
expression: snapshot
---
case_id: DE56/05
input: "\"6 trailing\t  \n    tab\"\n"
diagnostics:

cst:
DOCUMENT@0..24
  YAML_METADATA_CONTENT@0..24
    YAML_STREAM@0..24
      YAML_DOCUMENT@0..24
        YAML_SCALAR@0..23 "\"6 trailing\t  \n    tab\""
        NEWLINE@23..24 "\n"
